# python-property-based-testing

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: lint.yml  python-publish.yml  test.yml
pybt/core/: __init__.py  core.py  exception.py  util.py
pybt/test/: test.py
pybt/tests/: arg_gen_test.py  param_test.py  simple_firstclass_example_test.py  simple_nonclass_test.py  simple_test.py  simple_unit_test.py  test_util.py  typegen_test.py
pybt/typing/: basic_types.py  complex_types.py  core.py  type_declarations.py
tests/: param_test.py  simple_firstclass_example_test.py  simple_nonclass_test.py  simple_unit_test.py  typegen_test.py
tests/typing/: bool_test.py  float_test.py  integer_test.py  string_test.py
