[tool.poetry]
name = "python-property-based-testing"
version = "0.3.0"
description = "Property Based Testing in Python"
authors = ["vrindisbacher <vrindisbacher77@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pybt" }
]

[tool.poetry.dependencies]
python = ">=3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
