[tool.poetry]
name = "python-property-based-testing"
version = "0.9.2"
description = "Property Based Testing in Python"
authors = ["vrindisbacher <vrindisbacher77@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pybt" }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
ruff = "^0.0.262"
coverage = "^7.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
ignore = ["E731", "E741"]